# scantailor

./: .gitignore  .travis.yml  .version.h  AbstractCommand.h  AbstractFilter.h  AbstractRelinker.h  Application.cpp  Application.h  Application.h.moc_parameters  AtomicFileOverwriter.cpp  AtomicFileOverwriter.h  AutoManualMode.h  BackgroundExecutor.cpp  BackgroundExecutor.h  BackgroundTask.cpp  BackgroundTask.h  BasicImageView.cpp  BasicImageView.h  BasicImageView.h.moc_parameters  BeforeOrAfter.h  BubbleAnimation.cpp  BubbleAnimation.h  CMakeCache.txt  CMakeLists.txt  CNAME  CONTRIBUTING.md  COPYING  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  ChangedStateItemDelegate.h  CommandLine.cpp  CommandLine.h  CompositeCacheDrivenTask.h  ConsoleBatch.cpp  ConsoleBatch.h  ContentBoxAggregator.cpp  ContentBoxAggregator.h  ContentBoxPropagator.cpp  ContentBoxPropagator.h  (+257 more)
crash_reporter/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CrashReportDialog.cpp  CrashReportDialog.h  CrashReportDialog.h.moc_parameters  Makefile  MultipartFormData.cpp  MultipartFormData.h  cmake_install.cmake  main.cpp
crash_reporter/ui/: CTestTestfile.cmake  CrashReportDialog.ui  Makefile  cmake_install.cmake
dewarping/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Curve.cpp  Curve.h  CylindricalSurfaceDewarper.cpp  CylindricalSurfaceDewarper.h  DetectVertContentBounds.cpp  DetectVertContentBounds.h  DewarpingPointMapper.cpp  DewarpingPointMapper.h  DistortionModel.cpp  DistortionModel.h  DistortionModelBuilder.cpp  DistortionModelBuilder.h  Makefile  RasterDewarper.cpp  RasterDewarper.h  TextLineRefiner.cpp  TextLineRefiner.h  TextLineTracer.cpp  TextLineTracer.h  TopBottomEdgeTracer.cpp  TopBottomEdgeTracer.h  TowardsLineTracer.cpp  TowardsLineTracer.h  cmake_install.cmake
dewarping/.makepp/: curve.h.mk  distortionmodel.h.mk
filters/deskew/: ApplyDialog.cpp  ApplyDialog.h  ApplyDialog.h.moc_parameters  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CacheDrivenTask.cpp  CacheDrivenTask.h  Dependencies.cpp  Dependencies.h  Filter.cpp  Filter.h  ImageView.cpp  ImageView.h  ImageView.h.moc_parameters  Makefile  OptionsWidget.cpp  OptionsWidget.h  OptionsWidget.h.moc_parameters  Params.cpp  Params.h  Settings.cpp  Settings.h  Task.cpp  Task.h  Thumbnail.cpp  Thumbnail.h  ThumbnailTask.cpp  ThumbnailTask.h  cmake_install.cmake  ui_DeskewApplyDialog.h  ui_DeskewOptionsWidget.h
filters/fix_orientation/: ApplyDialog.cpp  ApplyDialog.h  (+24 more)
foundation/: AlignedArray.h  AutoRemovingFile.cpp  AutoRemovingFile.h  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DynamicPool.h  FastQueue.h  FlagOps.h  Grid.h  GridLineTraverser.cpp  GridLineTraverser.h  IntrusivePtr.h  Makefile  MatMNT.h  MatT.h  NonCopyable.h  NumericTraits.h  PerformanceTimer.cpp  PerformanceTimer.h  PriorityQueue.h  Property.h  PropertyFactory.cpp  PropertyFactory.h  PropertySet.cpp  PropertySet.h  Proximity.cpp  Proximity.h  QtSignalForwarder.cpp  QtSignalForwarder.h  QtSignalForwarder.h.moc_parameters  RefCountable.h  SafeDeletingQObjectPtr.h  ScopedDecInc.h  ScopedIncDec.h  Span.h  StaticPool.h  ValueConv.h  VecNT.h  VecT.h  (+2 more)
imageproc/: AdjustBrightness.cpp  AdjustBrightness.h  BWColor.h  Binarize.cpp  Binarize.h  BinaryImage.cpp  BinaryImage.h  BinaryThreshold.cpp  BinaryThreshold.h  BitOps.cpp  BitOps.h  ByteOrder.h  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  ColorForId.h  ColorInterpolation.cpp  ColorInterpolation.h  ColorMixer.h  ConnComp.h  ConnCompEraser.cpp  ConnCompEraser.h  ConnCompEraserExt.cpp  ConnCompEraserExt.h  Connectivity.h  ConnectivityMap.cpp  ConnectivityMap.h  Constants.cpp  Constants.h  CubicBSpline.cpp  CubicBSpline.h  CylindricalSurfaceDewarper.cpp  CylindricalSurfaceDewarper.h  DentFinder.cpp  DentFinder.h  DrawOver.cpp  DrawOver.h  ExpandPower2.cpp  ExpandPower2.h  FindPeaksGeneric.h  (+80 more)
interaction/: BoxResizeHandler.cpp  BoxResizeHandler.h  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DragHandler.cpp  DragHandler.h  DragWatcher.cpp  DragWatcher.h  DraggableLineSegment.cpp  DraggableLineSegment.h  DraggableObject.h  DraggablePixmap.cpp  DraggablePixmap.h  DraggablePoint.cpp  DraggablePoint.h  InteractionHandler.cpp  InteractionHandler.h  InteractionState.cpp  InteractionState.h  InteractiveBSpline.cpp  InteractiveBSpline.h  InteractiveXSpline.cpp  InteractiveXSpline.h  Makefile  ObjectDragHandler.cpp  ObjectDragHandler.h  ZoomHandler.cpp  ZoomHandler.h  cmake_install.cmake
math/: ArcLengthMapper.cpp  ArcLengthMapper.h  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CylindricalSurfaceDewarper.cpp  CylindricalSurfaceDewarper.h  HomographicTransform.h  LineBoundedByRect.cpp  LineBoundedByRect.h  LineIntersectionScalar.cpp  LineIntersectionScalar.h  LinearFunction.cpp  LinearFunction.h  LinearSolver.cpp  LinearSolver.h  Makefile  MatrixCalc.h  PolylineIntersector.cpp  PolylineIntersector.h  QuadraticFunction.cpp  QuadraticFunction.h  ReverseArcLengthMapper.cpp  ReverseArcLengthMapper.h  SidesOfLine.cpp  SidesOfLine.h  ToLineProjector.cpp  ToLineProjector.h  XSpline.cpp  XSpline.h  cmake_install.cmake
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  TestContentSpanFinder.cpp  TestMatrixCalc.cpp  TestSmartFilenameOrdering.cpp  cmake_install.cmake  main.cpp  tests
zones/: BasicSplineVisualizer.cpp  BasicSplineVisualizer.h  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  EditableSpline.cpp  EditableSpline.h  EditableZoneSet.cpp  EditableZoneSet.h  EditableZoneSet.h.moc_parameters  Makefile  SerializableSpline.cpp  SerializableSpline.h  Spline.cpp  Spline.h  SplineSegment.cpp  SplineSegment.h  SplineVertex.cpp  SplineVertex.h  Zone.cpp  Zone.h  ZoneContextMenuInteraction.cpp  ZoneContextMenuInteraction.h  ZoneContextMenuInteraction.h.moc_parameters  ZoneContextMenuItem.h  ZoneCreationInteraction.cpp  ZoneCreationInteraction.h  ZoneDefaultInteraction.cpp  ZoneDefaultInteraction.h  ZoneInteractionContext.cpp  ZoneInteractionContext.h  ZoneSet.cpp  ZoneSet.h  ZoneVertexDragInteraction.cpp  ZoneVertexDragInteraction.h  cmake_install.cmake
(+1089 files in other folders)
